move JVM_OPTS from cassandra.in.sh to the conf/ dir
Patch by Nick Bailey; review by eevans for CASSANDRA-1347

git-svn-id: https://svn.apache.org/repos/asf/cassandra/trunk@982845 13f79535-47bb-0310-9956-ffa450edef68